--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,31 +1,22 @@
+.butt {
+  width: 50px;
+  height: 50px;
+  background-color: #61dafb;
+  border-radius: 15px;
+  border: 5px solid rgb(144, 210, 245);
+  transition: 0.25s ease-in-out;
+  animation: App-logo-spin infinite 20s linear;
+}
+
+.butt:hover {
+  background-color: #00bdf1;
+  border: 5px solid rgb(94, 136, 242);
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
 }
 
 @keyframes App-logo-spin {
