create function to display engineers

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,10 @@
   align-items: center;
 }
 
+.engineer {
+  margin-top: 50px;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
