Connecting server and client - T21 & adding command to start server/client together - T34  (#1)
* add button for test

* add nodemon

* set proxy to 8000

* create function to display engineers

* create router and middleman

* add script to start

* add scripts and fix proxy

* create new file for Engineers.tsx component

* change class names and make new ones

* cleanup file

* change import statements

* change start command

* improve display to screen

* connect text file

* add new component

* change li into component

* simplify component

* correct names

* fix quotes

* final fixes

* fix merge header

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,3 +11,11 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+#root {
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
