--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,7 +10,7 @@
   grid-row-start: 2;
   width: 50px;
   height: 50px;
-  background-color: #61dafb; /*Could be excluded*/
+  background-color: #61dafb;
   border-radius: 15px;
   border: 5px solid rgb(144, 210, 245);
   transition: 0.25s ease-in-out;
