--- a/client/src/assets/App.css
+++ b/client/src/assets/App.css
@@ -92,6 +92,81 @@
   margin-top: 10px;
 }
 
+.friendslistPop {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  overflow: scroll;
+  position: absolute;
+  border: 2px solid rgb(0, 0, 0);
+  background-color: #5199ad;
+  border-radius: 25px;
+  margin-left: -70px;
+  margin-top: 10px;
+  height: 300px;
+  width: 150px;
+  padding: 10px;
+}
+
+.friendslistPop ul {
+  list-style: none;
+}
+
+.friend {
+  gap: 20px;
+  align-items: center;
+  display: flex;
+  justify-content: left;
+  transition: 0.25s ease-in-out;
+  min-width: 150px;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(35, 35, 83, 0.11);
+  border-radius: 10px;
+}
+
+.friend:nth-of-type(1) {
+  margin-top: 30px;
+}
+
+.search input {
+  width: 125px;
+  border-radius: 25px;
+}
+
+.search {
+  gap: 20px;
+  align-items: center;
+  display: flex;
+  justify-content: left;
+  transition: 0.25s ease-in-out;
+  min-width: 150px;
+  margin: 0;
+  padding: 0;
+  background-color: rgba(35, 35, 83, 0.11);
+  border-radius: 10px;
+}
+
+.searchIcon {
+  position: absolute;
+  right: 30px;
+  top: -5px;
+  color: black;
+}
+.searchIconCover {
+  position: absolute;
+  min-width: none;
+  margin: 0;
+  padding: 0;
+  background-color: transparent;
+}
+
+.friend img {
+  width: 40px;
+  border-radius: 25px;
+  height: 40px;
+}
+
 /* LoggedIn page  - End */
 
 /* Logout button - start */
@@ -174,6 +249,9 @@
   /* left: 0; */
   /* width: 50px; */
   /* min-width: 40px; */
+  display: flex;
+  align-items: center;
+  gap: 20px;
   height: 40px;
   background-color: transparent;
   color: none;
