login page initial push

--- a/client/src/assets/App.css
+++ b/client/src/assets/App.css
@@ -62,6 +62,7 @@
   background-size: cover;
   min-width: 50px;
   transition: 0.25s ease-in-out;
+  font: PP Neue Montreal
 }
 
 .logoutBtnClicked {
@@ -165,6 +166,7 @@
 .signupBtn {
   width: 200px;
   height: 50px;
+  font: PP Neue Montreal
 }
 
 /* signUp button - end */
