--- a/client/src/assets/form.css
+++ b/client/src/assets/form.css
@@ -1,10 +1,21 @@
 p, div {
-    font-family: Neue Montreal;
+    font-family: PP Neue Montreal;
+  }
+  
+  .logintitle {
+    font-size: 20px;
+    line-height: 60px;
+    float: left;
+    font-weight: bold;
   }
 
   body{
     margin:0;
     padding:0;
+  }
+
+  .Link {
+    text-decoration: 'none';
   }
 
   .wrapper {
@@ -15,9 +26,13 @@ p, div {
     justify-content: center;
     align-items: center;
     background-color: rgb(233, 246, 253);
+    background-image: url('amy-shamblen-M-dLdqCVfAY-unsplash.jpg');
+    opacity: 0.9;
+    background-size: cover;
   }
 
   .form-wrapper {
+    
     display: flex;
     flex-direction: column;
     width: 280px;
@@ -25,7 +40,7 @@ p, div {
     min-width: 100px;
     min-height: 400px;
     padding: 20px 40px;
-    border-radius: 6px;
+    border-radius: 25px;
     box-shadow: 0px 8px 36px #222;
     background-color: #fefefe;
   }
@@ -86,6 +101,7 @@ p, div {
   .email,
   .password {
     display: flex;
+    border-radius: 5px 20px 5px;
     flex-direction: column;
     margin-bottom: 15px;
     width: 100%;
