--- a/client/src/assets/form.css
+++ b/client/src/assets/form.css
@@ -3,11 +3,12 @@ p, div {
   }
   
   .logintitle {
-    font-size: 20px;
+    font-size: 24px;
     line-height: 60px;
     float: left;
     font-weight: bold;
     font-family: Neue Montreal;
+    text-align: center;
   }
 
   body{
@@ -20,8 +21,8 @@ p, div {
     text-align: center;
     color: black;
     font-size: smaller;
-    margin-left: 45px;
-    margin-top: 10px;
+    margin-left: 25px;
+    margin-top: 15px;
   }
 
   .wrapper {
@@ -32,7 +33,7 @@ p, div {
     justify-content: center;
     align-items: center;
     background-color: rgb(233, 246, 253);
-    background-image: url('amy-shamblen-M-dLdqCVfAY-unsplash.jpg');
+    background-image: url('background-2.jpg');
     opacity: 0.9;
     background-size: cover;
   }
@@ -92,7 +93,7 @@ p, div {
     margin-top: 0.5em;
     padding:  0.938em;
     border: none;
-    border-radius: 4px;
+    border-radius: 8px;
     background-color: rgb(0, 3, 1);
     color: #fefefe;
   }
