--- a/client/src/assets/form.css
+++ b/client/src/assets/form.css
@@ -33,7 +33,9 @@ p, div {
     justify-content: center;
     align-items: center;
     background-color: rgb(233, 246, 253);
-    background-image: url('background-2.jpg');
+    background-image: url('blue-pink-present.png');
+    background-size: 200%;
+    background-position-y: 30%;
     opacity: 0.9;
     background-size: cover;
   }
