--- a/client/src/assets/form.css
+++ b/client/src/assets/form.css
@@ -2,13 +2,22 @@ p, div {
     font-family: PP Neue Montreal;
   }
   
-  .logintitle {
+  .logintitle { 
     font-size: 24px;
     line-height: 60px;
     float: left;
     font-weight: bold;
-    font-family: Neue Montreal;
+    font-family: PP Neue Montreal;
     text-align: center;
+  }
+
+  .signuptitle { 
+    font-size: 24px;
+    line-height: 60px;
+    float: left;
+    font-weight: bold;
+    font-family: PP Neue Montreal;
+    text-align: left;
   }
 
   body{
@@ -33,8 +42,7 @@ p, div {
     justify-content: center;
     align-items: center;
     background-color: rgb(233, 246, 253);
-    background-image: url('blue-pink-present.png');
-    background-size: 200%;
+    background-image: url('background-2-edit.jpg');
     background-position-y: 30%;
     opacity: 0.9;
     background-size: cover;
@@ -43,13 +51,13 @@ p, div {
   .form-wrapper {
     display: flex;
     flex-direction: column;
-    width: 280px;
-    max-width: 80%;
+    width: 400px;
+    max-width: 50%;
     min-width: 100px;
-    min-height: 400px;
+    min-height: 300px;
     padding: 20px 40px;
     border-radius: 25px;
-    box-shadow: 0px 8px 36px #222;
+    box-shadow: 0px 8px 36px #E5E5E5;
     background-color: #fefefe;
   }
 
@@ -96,23 +104,23 @@ p, div {
     padding:  0.938em;
     border: none;
     border-radius: 15px;
-    background-color: rgb(0, 3, 1);
+    background-color: rgb(92, 202, 251);
     color: #fefefe;
   }
 
   button:hover {
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(247, 182, 210);
     color: #fefefe;
   }
 
-  .username,
+  .firstname,
   .email,
   .password {
     display: flex;
     border-radius: 5px 20px 5px;
     flex-direction: column;
     margin-bottom: 15px;
-    width: 100%;
+    width: 80%;
   }
 
   .submit {
