Co-authored-by: Jake <sky159321@users.noreply.github.com>

--- a/client/src/assets/fonts.css
+++ b/client/src/assets/fonts.css
@@ -1,5 +1,5 @@
 @font-face {
-    font-family: 'MyFont';
-    src: url('./fonts/MyFont.ttf') format('truetype');
+    font-family: 'NeueMontreal';
+    src: url('./fonts.ttf') format('truetype');
   }
   
