--- a/client/src/assets/css_group/form.css
+++ b/client/src/assets/css_group/form.css
@@ -2,22 +2,13 @@ p, div {
   font-family: PP Neue Montreal;
 }
 
-.logintitle { 
+.logintitle {
   font-size: 24px;
   line-height: 60px;
   float: left;
   font-weight: bold;
   font-family: PP Neue Montreal;
   text-align: center;
-}
-
-.signuptitle { 
-  font-size: 24px;
-  line-height: 60px;
-  float: left;
-  font-weight: bold;
-  font-family: PP Neue Montreal;
-  text-align: left;
 }
 
 body{
@@ -42,8 +33,8 @@ body{
   justify-content: center;
   align-items: center;
   background-color: rgb(233, 246, 253);
-  background-image: url('blue-pink-better-theme.png');
-  background-position-y: 30%;
+  background-image: url('../image_group/blue-pink-better-theme.png');
+  background-position-y: 40%;
   opacity: 0.9;
   background-size: cover;
 }
@@ -51,10 +42,10 @@ body{
 .form-wrapper {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  width: 280px;
   max-width: 80%;
   min-width: 100px;
-  min-height: 300px;
+  min-height: 400px;
   padding: 20px 40px;
   border-radius: 25px;
   box-shadow: 0px 8px 36px #222;
@@ -104,13 +95,14 @@ button {
   padding:  0.938em;
   border: none;
   border-radius: 15px;
-  background-color: rgb(92, 202, 251);
-  color: #fefefe;
+  color: white;
+}
+.buttonNormal {
+  background-color: black;
 }
 
-button:hover {
-  background-color: rgb(247, 182, 210);
-  color: #fefefe;
+.buttonColorful {
+  background-image: linear-gradient(to right, #64CFFF , #FF59A1)
 }
 
 .username,
