Update: changed branch name, organized assets, and changed css files to css modules.

--- a/client/src/assets/css_group/fonts.module.css
+++ b/client/src/assets/css_group/fonts.module.css
@@ -1,5 +1,6 @@
-@font-face {
+:local .myFont {
+  @font-face {
     font-family: 'MyFont';
     src: url('./fonts/MyFont.ttf') format('truetype');
   }
-  
+}
