--- a/client/src/assets/css_group/App.module.css
+++ b/client/src/assets/css_group/App.module.css
@@ -1,11 +1,11 @@
-.title {
+:local .title {
   grid-column-start: 2;
   grid-row-start: 2;
 
   justify-self: center;
 }
 
-.startBtn {
+:local .startBtn {
   grid-column-start: 2;
   grid-row-start: 2;
   width: 50px;
@@ -20,22 +20,22 @@
   justify-self: center;
 }
 
-.startBtn:hover {
+:local .startBtn:hover {
   background-color: #00bdf1;
   border: 5px solid rgb(94, 136, 242);
 }
 
-.startBtnActivated {
+:local .startBtnActivated {
   background-color: rgb(173, 255, 169);
   border: 5px solid black;
   opacity: 1;
 }
 
-.startBtnBuffer {
+:local .startBtnBuffer {
   opacity: 0.6;
 }
 
-.App {
+:local .App {
   height: 100vh;
   width: 100vw;
   display: grid;
@@ -44,7 +44,7 @@
   flex-direction: column;
 }
 
-.engineer {
+:local .engineer {
   margin-top: 50px;
   grid-row: 2;
   align-self: flex-end;
@@ -53,7 +53,7 @@
 
 /* Logout button - start */
 
-.logoutBtn {
+:local .logoutBtn {
   border: 1px solid rgb(0, 0, 0);
   width: 50px;
   height: 50px;
@@ -65,16 +65,16 @@
   font: PP Neue Montreal
 }
 
-.logoutBtnClicked {
+:local .logoutBtnClicked {
   border: 1px solid #00bdf1;
 }
 
-.logoutBtn:hover,
-.logoutBtnClicked:hover {
+:local .logoutBtn:hover,
+:local .logoutBtnClicked:hover {
   opacity: 0.8;
 }
 
-.logoutPop {
+:local .logoutPop {
   position: absolute;
   border: 2px solid rgb(0, 0, 0);
   background-color: #5199ad;
@@ -83,7 +83,7 @@
   margin-top: 10px;
 }
 
-.logoutPop ul {
+:local .logoutPop ul {
   height: 100%;
   list-style: none;
   margin: 0;
@@ -98,7 +98,7 @@
   color: white;
 }
 
-.logoutPop ul li {
+:local .logoutPop ul li {
   transition: 0.25s ease-in-out;
   border-radius: 25px;
   display: flex;
@@ -107,11 +107,11 @@
   width: 90px;
 }
 
-.logoutPop li:hover {
+:local .logoutPop li:hover {
   background-color: rgba(8, 8, 8, 0.61);
 }
 
-.logoutBtnCover {
+:local .logoutBtnCover {
   grid-column-start: 3;
   min-width: 50px;
   justify-self: end;
@@ -122,7 +122,7 @@
   margin-top: 10px;
 }
 
-.individualBtn {
+:local .individualBtn {
   position: absolute;
   left: 0;
   width: 50px;
@@ -137,11 +137,11 @@
   cursor: pointer;
 }
 
-.firstIndiv {
+:local .firstIndiv {
   margin-left: 5px;
 }
 
-.individualBtn:hover {
+:local .individualBtn:hover {
   background-color: transparent;
 }
 
@@ -149,21 +149,21 @@
 
 /* Login button - start */
 
-.loginBtn {
+:local .loginBtn {
   width: 200px;
   height: 50px;
 }
 
 /* Login button - end */
 
-.btnWrap {
+:local .btnWrap {
   grid-row-start: 3;
   grid-column-start: 2;
 }
 
 /* signUp button - start */
 
-.signupBtn {
+:local .signupBtn {
   width: 200px;
   height: 50px;
   font: PP Neue Montreal
