--- a/client/src/assets/css_group/index.module.css
+++ b/client/src/assets/css_group/index.module.css
@@ -1,4 +1,4 @@
-body {
+:local body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -7,12 +7,12 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
+:local code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
-#root {
+:local #root {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New';
   height: 100vh;
   display: flex;
